unpackaged/main/default/objects/Consumable_Parts__c/Consumable_Parts__c.object-meta.xml
<CustomObject>
    <label>Consumable Parts</label>
    <nameField>
        <displayFormat>CP-{000000000}</displayFormat>
        <label>Consumed Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consumable Parts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>