unpackaged/main/default/objects/Consumable_Parts__c/fields/Part_Name__c.field-meta.xml
<CustomField>
    <fullName>Part_Name__c</fullName>
    <label>Part Name</label>
    <type>TextArea</type>
</CustomField>