unpackaged/main/default/objects/Consumable_Parts__c/fields/Part_Type__c.field-meta.xml
<CustomField>
    <fullName>Part_Type__c</fullName>
    <label>Part Type</label>
    <type>TextArea</type>
</CustomField>