unpackaged/main/default/objects/Consumable_Parts__c/fields/PartsCodeID__c.field-meta.xml
<CustomField>
    <fullName>PartsCodeID__c</fullName>
    <label>PartsCodeID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>