unpackaged/main/default/objects/Consumable_Parts__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <label>UOM</label>
    <type>TextArea</type>
</CustomField>