unpackaged/main/default/objects/Consumable_Parts__c/listViews/All_Consumable_Parts.listView-meta.xml
<ListView>
    <fullName>All_Consumable_Parts</fullName>
    <columns>NAME</columns>
    <columns>Part_Name__c</columns>
    <columns>Part_Type__c</columns>
    <columns>UOM__c</columns>
    <columns>PartsCodeID__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All Consumable Parts</label>
</ListView>